# nebula2sampz

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  crash-hunt.yml
Source/: EqCurve.cpp  EqCurve.h  GridPresets.cpp  GridPresets.h  GridView.cpp  GridView.h  History.cpp  History.h  MasterProcessor.cpp  MasterProcessor.h  MidiLearn.cpp  MidiLearn.h  MorphPadView.cpp  MorphPadView.h  Nebula2LookAndFeel.cpp  Nebula2LookAndFeel.h  ParameterIDs.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.cpp  Presets.h  RackLayout.h  RackView.cpp  RackView.h  Randomise.cpp  Randomise.h  Theme.cpp  Theme.h  Transport.h  WaveformView.cpp  WaveformView.h
Source/dsp/: AmpShape.cpp  AmpShape.h  Colour.cpp  Colour.h  ColourChain.cpp  ColourChain.h  Delay.cpp  Delay.h  DrumKit.cpp  DrumKit.h  DrumSynth.cpp  DrumSynth.h  EqCurveMath.h  FxGrid.cpp  FxGrid.h  MorphEngine.cpp  MorphEngine.h  MorphPad.cpp  MorphPad.h  ParametricEq.cpp  ParametricEq.h  RackGraph.cpp  RackGraph.h  RackModules.cpp  RackModules.h  Resonator.cpp  Resonator.h  Reverb.cpp  Reverb.h  SampleLayer.cpp  SampleLayer.h  Saturator.cpp  Saturator.h  SliceAnalysis.cpp  SliceAnalysis.h  Slicer.cpp  Slicer.h  SpaceProcessor.cpp  SpaceProcessor.h  StepFx.cpp  (+3 more)
Tests/: TestMain.cpp
design/: build-artifact.js  check.js  serve.js  ui-spec.html
docs/: BETA_TESTERS.md  VST_WORKFLOW.md  parameter-inventory.md
reference/: nebula2-prototype.html
